Fix horizontal numbers alignment

--- a/vagrant/solerni/theme/halloween/less/halloween-block-horizontal-numbers.less
+++ b/vagrant/solerni/theme/halloween/less/halloween-block-horizontal-numbers.less
@@ -22,6 +22,10 @@
         text-align:     center;
         padding-bottom:  @s-triple-md-margin;
 
+        @media (min-width:  @screen-sm-min) {
+            text-align: left;
+        }
+
         @media (min-width:  @screen-md-min) {
             padding-bottom: 0;
         }
